[package]
name = "rbj_eq"
version = "0.6.0"
edition = "2021"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = 'Robert Bristow-Johnson "equalizer filters"'
license = "MIT"
repository = "https://github.com/BartMassey/rbj-eq"
readme = "README.md"
categories = ["multimedia::audio"]

[dependencies.num-traits]
version = "0.2"
default-features = false
features = []

[dependencies]
numeric_literals = "0.2"

[features]
default = ["math_std", "capi"]
math_libm = ["num-traits/libm"]
math_std = ["num-traits/std"]
std = []
capi = []
