[package]
name = "rbj_eq"
version = "0.7.0"
edition = "2021"
authors = ["Bart Massey <bart.massey@gmail.com>"]
description = 'Robert Bristow-Johnson "equalizer filters"'
license = "MIT"
repository = "https://github.com/BartMassey/rbj-eq"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "dsp", "filter", "equalizer"]

[dependencies.num-traits]
version = "0.2"
default-features = false
features = []

[dependencies.serde]
version = "1.0"
optional = true

[dependencies]
numeric_literals = "0.2"

[dev-dependencies]
version-sync = "0.9"

[features]
default = ["math_std", "capi"]
math_libm = ["num-traits/libm"]
math_std = ["num-traits/std"]
capi = []
serde = ["serde/derive"]

[badges.maintenance]
status = "actively-developed"
